# cpp23_modules_project

./: CMakeLists.txt  README.md  find_std_module.sh
.cache/clangd/index/: custom.cppm.6BAE298407BDA2C3.idx  main.cpp.2775CD3E73C31C91.idx
lib/: CMakeLists.txt  custom.cppm
modules/: custom.cppm
src/: CMakeLists.txt  config.h.in  main.cpp
